More edits + clean up ORNL info

--- a/Nov2015/hao.bib
+++ b/Nov2015/hao.bib
@@ -174,7 +174,7 @@ year={2010},
 @article{WLLSMS,
 author={Oak Ridge National Laboratory},
 title={{WL-LSMS Benchmark}},
-journal={\url{https://asc.llnl.gov/CORAL-benchmarks/#lsms}},
+journal={\url{https://www.olcf.ornl.gov/wp-content/training/electronic-structure-2012/Eisenbach_OakRidge_February.pdf}},
 year={2013},
 }
 
