--- a/Nov2015/intro.tex
+++ b/Nov2015/intro.tex
@@ -12,6 +12,6 @@ In our previous work, we focused on understanding how ESPs and SCs can work toge
 
 The main motivation for our geographical study lies in the way electricity is priced. In Europe, electricity is more expensive and is subject to more variability because of the larger mix of renewable sources. Additionally, the SCs in both geographical regions have different maximum power demands. For example, in the United States, four of the SCs we surveyed had HPC workloads of 10 MW or more. The remaining SCs in the United States as well as all the SCs in Europe had workloads of 5 MW of less. The size of demand and its variability have different and co-related impacts on the operation of the SCs and grid. 
 
-Our initial expectation was that that the European SCs will be more tightly integrated with their ESPs because of the higher prices and more extensive use of renewables.  Contrary to our expectations, however, we found that the United States shows more interest in responding to requests from their ESPs than Europe. The four SCs that needed 10MW or more had active communication channels with their ESPs about responding to grid requests.  None of the SCs in Europe had similar relationships with their ESPs. In this paper, we present these results and analyze the differences across the two geographies that may have led to this result. We first present results from our quantitative survey from 9 European SC sites, and then conduct a detailed qualitative analysis for three major SCs: Oak Ridge National Laboratory (ORNL), Lawrence Livermore National Laboratory (LLNL), and Leibniz Supercomputing Center (LRZ). The key goal of the qualitative analysis is to delve deeper into the electricity pricing structures as well as the available incentives for a tighter integration and to understand what motivates the existing relationship between SCs and their ESPs. 
+Our initial expectation was that that the European SCs will be more tightly integrated with their ESPs because of the higher prices and more extensive use of renewables.  Contrary to our expectations, however, we found that the United States shows more interest in responding to requests from their ESPs than Europe. The four SCs that needed 10MW or more had active communication channels with their ESPs about responding to grid requests.  None of the SCs in Europe had similar relationships with their ESPs. In this paper, we present these results and analyze the differences across the two geographies that may have led to this result. We first present results from our quantitative survey from 9 European SC sites and 11 United States SC sites, and then conduct a detailed qualitative analysis for three major SCs: Oak Ridge National Laboratory (ORNL), Lawrence Livermore National Laboratory (LLNL), and Leibniz Supercomputing Center (LRZ). The key goal of the qualitative analysis is to delve deeper into the electricity pricing structures as well as the available incentives for a tighter integration and to understand what motivates the existing relationship between SCs and their ESPs. 
 
 Section \ref{strategies} presents an overview of DM actions and motivates the need for an open multi-directional relationship between SCs and their ESPs. Section \ref{res} discusses the quantitative results from the questionnaire. Section \ref{intws} presents details of our site-specific interviews and a qualitative analysis of the demand management options available to these sites. In Section \ref{comm}, we discuss our key findings and highlight some of the comments we received from our respondents. Section \ref{relwork} presents related work, and Section \ref{summary} concludes this article.
