--- a/Nov2015/results.tex
+++ b/Nov2015/results.tex
@@ -40,7 +40,7 @@ From our questionnaire, we also concluded that neither European nor the United S
 We also asked our European respondents to indicate what might motivate them to communicate with their ESPs. The results are shown in Table \ref{fig:table2}. As can be noted from this table, the main motivators are the financial incentives and the desire to be ``good citizens.''
 
 \input{Table3.jpg.tex}
-We noted that none of the European SCs communicated about grid integration potential, demand management and available flexibility with their associated ESPs. Additionally, there was little interest in a tighter integration with the ESPs. In general, the SCs in the United States seem to have a closer relationship with their ESPs than the ones in Europe. This can also be verified from Table \ref{fig:table3}, which shows that only 1 of the 9 respondents in Europe has had a discussion about programs with their ESP. 
+We noted that none of the European SCs communicated about grid integration potential, demand management and available flexibility with their associated ESPs. Additionally, there was little interest in a tighter integration with the ESPs. In general, the SCs in the United States seem to have a closer relationship with their ESPs than the ones in Europe. This can also be verified from Table \ref{fig:table3}, which shows that only 1 of the 9 respondents in Europe have had a discussion with their ESP. 
 
 \subsection{Other Comments}
 \label{comm}
