--- a/Nov2015/intws.tex
+++ b/Nov2015/intws.tex
@@ -44,96 +44,12 @@ obligations toward or services provided to the ESP, mostly because of
 the QOS guarantees that have to be adhered to for their users.
 
 \subsection{Analysis}
-This is a good summary. 
+The key goals for our qualitative analysis were to understand the power purchase relationships, energy use, and the level of demand management flexibility available to reduce electricity use and/or energy costs for the three SCs under consideration. Our interviews thus focused on the annual electricity purchase negotiations and pricing structure, and on characterizing SC's electricity use relative to larger campus. We also tried to identify the level of motivation for demand management for lowering peak power and energy use and for any services being offered. We observed that while some trends were common across all three sites, there were some differences. We summarize these similarities and differences below. \\
 
-Hi Tapasya -- I have some minor modifications and additions to the section with some background text that you can use to interweave it into section 4. 
+{\bf Similarities:}
+An important common trend was that the power purchase negotiations were typically done by a third party (for example, DOE, Exeter or Stadtwerke München) and on an annual basis. Power capacity was negotiated by specifying an upper limit on the amount of power procured for all three sites. Additionally, in the case of ORNL and LRZ, a lower bound on the power capacity was also clearly specified. Negotiations for all three sites were done at the level of entire site or a set of collaborative sites, and not merely for the supercomputing facility that was located within the site.\\
 
-Our interviews with SCs focused on:
-Annual electricity purchase negotiations and pricing structure (kW, kWh, $/kW, and $/kWh)
-Characterizing SC's electricity use, relative to larger campus
-Motivation for demand management to lower peak power and energy use
-Demand management potential and services offered
-Anticipated future relationship with ESPs.
-These interviews results helps understanding the power purchase relationships, energy use, demand management flexibility, and any motivation to reduce electricity use and/or costs. 
+{\bf Differences:}
+We observed that the pricing structure was different in all three cases. In case of LLNL, there was a flat rate, which makes LLNL less sensitive to electricity cost variation. For ORNL, there was a variable rate, which makes it somewhat sensitive to electricity costs. LRZ, however, is very sensitive to the pricing structure because of the expensive energy costs as well as the impact of power swings on electricity costs. In terms of power fluctuations, LLNL used demand forecasting to be a good citizen. For both LLNL and ORNL, reliability was not a major concern and power variations were acceptable by the ESP. For LRZ, the electricity cost increases if there were more power swings, making them highly responsive to such variability and enabling the need for better forecasting. The electricity generation mix in the United States was mostly thermal, where as in Europe it was largely renewable sources of energy. \\
 
-Similarities:  
-Annual negotiation (Power purchase negotiations)
-Power band (for operations);  ORNL and LRZ, not sure about LLNL (they do have an upper-bound)
-Negotiation done for larger site
-Third party involvement for pricing (DOE, Exeter, Munich Power Company)
-Pricing structure; ORNL and LRZ variable; LLNL flat rate
-Differences:
-Price sensitivity to variable rates:  LRZ most sensitive, ORNL less sensitive and LLNL not applicable (flat rate)
-Swings:  LLNL= good citizen only, ORNL= in the noise, LRZ= highly responsive
-Electricity generation mix (US = largely thermal; Europe = largely renewable)
-The discussions section should focus on what this means in the context of the paper's goals and objectives. 
-
--Rish
-
-On Thu, Dec 17, 2015 at 6:57 PM, Natalie Bates <natalie.jean.bates@gmail.com> wrote:
-This is my view of the ORNL, LLNL, LRZ data that I'm comfortable sharing  This could be summarized in a table.
-
-Similarities:  
-Annual negotiation
-Power band;  ORNL and LRZ, not sure about LLNL (they do have an upper-bound)
-Negotiation done for larger site
-Third party involvement for pricing (DOE, Exeter, Munich Power Company)
-Pricing structure; ORNL and LRZ variable; LLNL flat rate
-Differences:
-Price sensitivity to variable rates:  LRZ most sensitive, ORNL less sensitive and LLNL not applicable (flat rate)
-Swings:  LLNL= good citizen only, ORNL= in the noise, LRZ= highly responsive
-
-
-%Table \ref{tabIntw} presents details of this qualitative analysis. We have recorded the results in a tabular form to facilitate comparison between the three sites under consideration. 
-%
-%\begin{table}
-%\centering
-%\label{tabIntw} 
-%\begin{tabular}{|l|l|l|l|}
-% \hline
-% \bf{Site} & \bf{ORNL} & \bf{LLNL} & \bf{LRZ} \\ 
-% \hline
-% HPC System & Titan & Sequoia & SuperMUC \\ 
-% \hline
-% HPC workload & Basic Science & Basic and & Academic \\
-% type &&Nuclear Science&\\
-% \hline
-% HPC workload & Low & Mission-critical & Low\\
-% criticality&&&\\
-% \hline
-%Point of contact & Jim Rogers & Anna-Maria Bailey & Herbert Huber\\
-%\hline
-%Responsibility & None, contract & None, contract & None, contract \\
-%in negotiating & negotiated by DOE & negotiated by DOE & negotiated at \\
-%contract with&&&the site-level by\\
-%ESP &&&management\\
-%\hline
-%Electricity &Demand as well&Only energy & Energy is very\\
-%Pricing & as energy charges,&charges, flat&expensive, high power \\
-%Structure & depends on season&rate, relatively&taxes as well as\\
-%&and time of day. &cheap. Thus care about&season dependent.\\
-%&Operate within&utilizing all &Operate within\\
-%&a power band&allocated power&power band\\
-%\hline
-%Power cost & & & \\
-%as percentage&About 25-30\%&Under 8\%&About 50\%\\
-%of TCO&&&\\
-%\hline
-%Obligations &&&\\
-%Toward ESPs &None, and&None, and&None, and\\
-%(and offered & no incentive either& no incentive either&no incentive either\\
-%incentives for &&&\\
-% the same)&&&\\
-%\hline
-%Services for &None, except&None, except&None, except\\
-%ESPs&maintenance or&maintenance or&maintenance or\\
-%&general&general&general\\
-%&forecasting&forecasting&forecasting\\
-%\hline
-%Future &Will use the &Will use the&Will use the \\
-%relationship &same, reliable ESP&same, reliable ESP&same ESP, flexibility\\
-%with ESP&&&decisions are political.\\
-%\hline
-% \end{tabular}
-% \end{table}
-
+Overall, we believe that several factors drive the motivation for demand management. The key ones are the control that a site has when it comes to power purchase negotiations, their price sensitivity to power fluctuations, and financial as well as good-citizen-based intentions for communicating their demand with their ESP.  One of the factors that was unclear in this analysis was the contribution of the electricity cost as a part of the site's annual budget or operation costs, which we plan to explore as part of our future work. 
