--- a/Nov2015/hao.bib
+++ b/Nov2015/hao.bib
@@ -178,7 +178,18 @@ journal={\url{https://www.olcf.ornl.gov/wp-content/training/electronic-structure
 year={2013},
 }
 
+@article{siano2014demand,  title={Demand response and smart grids?A survey},  author={Siano, Pierluigi},  journal={Renewable and Sustainable Energy Reviews},  volume={30},  pages={461--478},  year={2014},  publisher={Elsevier}}
 
+ 
+@inproceedings{clausen2014load,
+  title={Load management of data centers as regulation capacity in Denmark},
+  author={Clausen, Anders and Ghatikar, Girish and Jorgensen, Bo Norregaard},
+  booktitle={Green Computing Conference (IGCC), 2014 International},
+  pages={1--10},
+  year={2014},
+  organization={IEEE}
+}
+ 
 
 
 
