Jim Rogers Comments + Additional Authors

--- a/Nov2015/execSummary_njb.tex
+++ b/Nov2015/execSummary_njb.tex
@@ -6,7 +6,8 @@
 
 \title{Supercomputing Centers and Electricity Service Providers: A Geographically Distributed Perspective on Demand Management in Europe and the United States}
 \author{Tapasya Patki\inst{1} \and Natalie Bates\inst{2} \and Girish Ghatikar\inst{3} \and Anders Clausen\inst{4} \and Sonja Klingert\inst{5} \and Ghaleb Abdulla\inst{1} \and Mehdi Sheikhalishahi\inst{6}}
-\institute{Lawrence Livermore National Laboratory \and Energy Efficient High Performance Computing Working Group \and GreenLots \and University of Southern Denmark \and The University of Mannheim \and Create-Net \\ Contact Email: patki1@llnl.gov}
+\institute{Lawrence Livermore National Laboratory \and Energy Efficient High Performance Computing Working Group \and GreenLots and Lawrence Berkeley National Laboratory \and University of Southern Denmark \and The University of Mannheim \and Create-Net \\ Contact Email: patki1@llnl.gov}
+
 %\author{Natalie Bates and Tapasya Patki \\ Demand Response Team, Energy-Efficient HPC Working Group}
 %\date{\today}
 %
@@ -33,6 +34,7 @@ In this paper, we first present results from a detailed, quantitative survey-bas
 \input{intws.tex}
 \input{relwork.tex}
 \input{summary.tex}
+\input{additionalAuth.tex}
 
 \bibliographystyle{plain}
 \bibliography{hao,refs}
