--- a/Nov2015/refs.bib
+++ b/Nov2015/refs.bib
@@ -8,7 +8,7 @@ doi={10.1007/s00287-014-0850-0},
 title={{Electrical Grid and Supercomputing Centers: An Investigative Analysis of Emerging Opportunities and Challenges}},
 url={http://dx.doi.org/10.1007/s00287-014-0850-0},
 publisher={Springer Berlin Heidelberg},
-author={Bates, Natalie and Ghatikar, Girish and Abdulla, Ghaleb and Koenig, Gregory A. and Bhalachandra, Sridutt and Sheikhalishahi, Mehdi and Patki, Tapasya and Rountree, Barry and Poole, Stephen},
+author={Bates, N. and Ghatikar, G. and Abdulla, G. and Koenig, G. and Bhalachandra, S. and Sheikhalishahi, M. and Patki, T. and Rountree, B. and Poole, S.},
 pages={111-127},
 language={English}
 }
@@ -16,7 +16,7 @@ language={English}
 
 @inproceedings{patterson2013tue,
   title={{TUE, a new energy-efficiency metric applied at ORNL's jaguar}},
-  author={Patterson, Michael K and Poole, Stephen W and Hsu, Chung-Hsing and Maxwell, Don and Tschudi, William and Coles, Henry and Martinez, David J and Bates, Natalie},
+  author={Patterson, M. and Poole, S. and Hsu, C. and Maxwell, D. and Tschudi, W. and Coles, H. and Martinez, D. and Bates, N.},
   booktitle={Supercomputing},
   pages={372--382},
   year={2013},
