--- a/Nov2015/results.tex
+++ b/Nov2015/results.tex
@@ -1,4 +1,4 @@
-\section{Results: Europe and United States}
+\section{Quantitative Study: Europe and United States}
 \label{res}
 In this section, we discuss the results from our quantitative survey. We extended our questionnaire from our previous work \cite{BatesESP} and contacted sixteen SCs in the European region.  Appendix \ref{appendixA} provides an overview of the questionnaire. The detailed definitions for each of the demand management approaches and strategies can be found in our previous work \cite{BatesESP}. Nine out of the sixteen European SCs that we contacted responded to the questionnaire. All except one of these sites were in Top 50 supercomputers in the world \cite{Top500}. 
 
@@ -42,7 +42,7 @@ We also asked our European respondents to indicate what might motivate them to c
 \input{Table3.jpg.tex}
 We noted that none of the European SCs communicated about grid integration potential, demand management and available flexibility with their associated ESPs. Additionally, there was little interest in a tighter integration with the ESPs. In general, the SCs in the United States seem to have a closer relationship with their ESPs than the ones in Europe. This can also be verified from Table \ref{fig:table3}, which shows that only 1 of the 9 respondents in Europe have had a discussion with their ESP. 
 
-\subsection{Other Comments}
+\subsection{Comments from Survey Respondents}
 \label{comm}
 From the comments section in our questionnaire, we noted that all SCs are already using \emph{demand forecasting} to communicate their upcoming demands and maintenance cycle schedules with their ESPs. For example, one comment was ``We project hourly average power at least a day in advance, within +/- 1MW''. Another interesting comment was ``We've to ensure that our power load neither over- nor under-shoots the contracted power band. In any cases of foreseen power abnormalities we've to inform our grid provider at least two days ahead of schedule.''
 
