--- a/Nov2015/intws.tex
+++ b/Nov2015/intws.tex
@@ -13,17 +13,17 @@ In order to shed light on the details of the relationships between SCs and ESPs 
 \item{How do you envision your future relationship with your electricity provider? (Possible answers were: tighter, for example, by selling local generation capacity; or looser, for example, by being self-sufficient with regards to electricity needs.}
 \end{itemize}
 
-\subsection{ORNL}
-For ORNL, DOE negotiates the contract with the ESP.  ORNL gets its power from TVA, which generates, transmits and distributes the power. The DOE and TVA negotiate the power capacity that is being provisioned each year. Typically, a range for operation is chosen, for the current year, this range is 35 MW to 75 MW. 
-In terms of electricity pricing, ORNL incurs two kinds of charges: a demand charge, which is fixed for a month, and an energy charge based on actual power consumption. The demand charge is determined by analyzing 30 minute blocks and by determining the peak or maximum value for the month. The demand charge can be off-peak or on-peak based on the time of the day. It has a time-of-use per day component. The base charge for energy is under 4 cents per kwh, which is low when compared to the industry.Including all the costs as well as seasonal charges, ORNL pays about 9.4 cents per kWh. ORNL's provider, TVA, is not affected by power swings of a few megawatts (5 to 8 MW) and is very reliable. The goal for ORNL is to keep keep its HPC systems fully utilized in terms of power. 
+\subsection{Oak Ridge National Laboratory}
+For ORNL, DOE negotiates the contract with the ESP.  ORNL gets its power from Tennessee Valley Authority (TVA), which generates, transmits and distributes the power. The DOE and TVA negotiate the power capacity that is being provisioned each year. Typically, a range for operation is chosen, for the current year, this range is 35 MW to 75 MW. 
+In terms of electricity pricing, ORNL incurs two kinds of charges: a demand charge, which is fixed for a month, and an energy charge based on actual power consumption. The demand charge is determined by analyzing 30 minute blocks and by determining the peak or maximum value for the month. The demand charge can be off-peak or on-peak based on the time of the day. It also has a time-of-use per day component. ORNL's provider, TVA, is not affected by power swings of a few megawatts (5 to 8 MW) and is very reliable. The goal for ORNL is to keep its HPC systems fully utilized in terms of power. 
 
 ORNL does not have any obligations and provide any services to its ESP.  The only requirement is to operate in the range that was negotiated (35 MW to 75 MW). They have a model that explains their power usage that they provide to the TVA annually, but there is no two-way communication or forecasting. In general, the capital expenditure for the SC at ORNL dominates the operational costs. As the HPC system cost depreciates with time (for example, Titan's depreciation is about 20K dollars per hour), there is little financial incentive to be flexible and to save on electricity costs. The goal is thus to keep their site fully utilized in terms of power. 
 
-\subsection{LLNL}
-In the case of LLNL,  DOE negotiates the contract with the ESP with the help of a consulting company called Exeter.  A bulk purchase of power is made for about 100 MW of power capacity from the California-Oregon Transmission Project (or COTP) and is shared between LLNL and two other DOE sites. PG\&E and WAPA are used for transmission and distribution. In terms of electricity pricing, LLNL does not pay a demand charge, but only pays a flat energy charge of about 4.5 cents per kWh, which is on the lower side when compared to the industry. Forecasting is done on a regular basis in order to be a good citizen. There is no financial incentive to save energy costs. Additionally, there are no obligations from the ESP and no services are provided. The goal is to keep the site fully utilized in terms of power and to minimize leftover power.  
+\subsection{Lawrence Livermore National Laboratory}
+In the case of LLNL,  DOE negotiates the contract with the ESP with the help of a consulting company called Exeter.  A bulk purchase of power is made for about 100 MW of power capacity from the California-Oregon Transmission Project (or COTP) and is shared between LLNL and two other DOE sites. Pacific Gas and Electric (PG\&E) and Western Area Power Administration (WAPA) are used for transmission and distribution. In terms of electricity pricing, LLNL does not pay a demand charge, but only pays a flat energy charge of about 4.5 cents per kWh, which is on the lower side when compared to the industry. Forecasting is done on a regular basis in order to be a good citizen. For the scope of this questionnaire related to the HPC facility, there is not much financial incentive to save energy costs. Additionally, there are no obligations from the ESP and no services are provided. The goal is to keep the site fully utilized in terms of power and to minimize leftover power in order to be energy efficient.  
 
-\subsection{LRZ}
-The power contract between LRZ and \emph{Stadtwerke München}, a Munich Power Company
+\subsection{Leibniz Supercomputing Center}
+The power contract between LRZ and \emph{Stadtwerke M{\"u}nchen}, a Munich Power Company
 is the result of pan-European procurement. LRZ purchases a basic power band for one
 or multiple years at the European power stock exchange. Hence, the power price is
 determined by the European stock market. Additionally, there are charges for the
@@ -47,9 +47,9 @@ the QOS guarantees that have to be adhered to for their users.
 The key goals for our qualitative analysis were to understand the power purchase relationships, energy use, and the level of demand management flexibility available to reduce electricity use and/or energy costs for the three SCs under consideration. Our interviews thus focused on the annual electricity purchase negotiations and pricing structure, and on characterizing SC's electricity use relative to larger campus. We also tried to identify the level of motivation for demand management for lowering peak power and energy use and for any services being offered. We observed that while some trends were common across all three sites, there were some differences. We summarize these similarities and differences below. \\
 
 {\bf Similarities:}
-An important common trend was that the power purchase negotiations were typically done by a third party (for example, DOE, Exeter or Stadtwerke München) and on an annual basis. Power capacity was negotiated by specifying an upper limit on the amount of power procured for all three sites. Additionally, in the case of ORNL and LRZ, a lower bound on the power capacity was also clearly specified. Negotiations for all three sites were done at the level of entire site or a set of collaborative sites, and not merely for the supercomputing facility that was located within the site.\\
+An important common trend was that the power purchase negotiations were typically done by a third party (for example, DOE, Exeter or Stadtwerke M{\"u}nchen) and on an annual basis. Power capacity was negotiated by specifying an upper limit on the amount of power procured for all three sites. Additionally, in the case of ORNL and LRZ, a lower bound on the power capacity was also clearly specified. Negotiations for all three sites were done at the level of entire site or a set of collaborative sites, and not merely for the supercomputing facility that was located within the site.\\
 
 {\bf Differences:}
 We observed that the pricing structure was different in all three cases. In case of LLNL, there was a flat rate, which makes LLNL less sensitive to electricity cost variation. For ORNL, there was a variable rate, which makes it somewhat sensitive to electricity costs. LRZ, however, is very sensitive to the pricing structure because of the expensive energy costs as well as the impact of power swings on electricity costs. In terms of power fluctuations, LLNL used demand forecasting to be a good citizen. For both LLNL and ORNL, reliability was not a major concern and power variations were acceptable by the ESP. For LRZ, the electricity cost increases if there were more power swings, making them highly responsive to such variability and enabling the need for better forecasting. The electricity generation mix in the United States was mostly thermal, where as in Europe it was largely renewable sources of energy. \\
 
-Overall, we believe that several factors drive the motivation for demand management. The key ones are the control that a site has when it comes to power purchase negotiations, their price sensitivity to power fluctuations, and financial as well as good-citizen-based intentions for communicating their demand with their ESP.  One of the factors that was unclear in this analysis was the contribution of the electricity cost as a part of the site's annual budget or operation costs, which we plan to explore as part of our future work. 
+Overall, we believe that several factors drive the motivation for demand management. The key ones are the control that a site has when it comes to power purchase negotiations, their price sensitivity to power fluctuations, and financial as well as good-citizen-based intentions for communicating their demand with their ESP.  One of the factors that was unclear in this analysis was the contribution of the electricity cost as a part of the site's annual budget or operation costs, which we plan to explore as part of our future work.
